Bump to version 1.4.0